# rialopred

./: .env.example  .gitignore  Anchor.toml  DEPLOY.md  README.md  RIALO_APPLICATION.md  index.html  manifest.json  netlify.toml  package-lock.json  package.json  setup.sh  vercel.json  vite.config.ts
.github/: SECRETS.md
.github/workflows/: ci.yml  deploy-contract.yml
api/: prices.js
assets/: index-BaNp3a_h.js  index-Z-QZwZ7M.css
contracts/programs/prediction_market/: Cargo.toml
contracts/programs/prediction_market/src/: lib.rs
contracts/scripts/: deploy.ts  verify.ts
contracts/tests/: prediction_market.test.ts
public/: application.html  sw.js
src/: App.tsx
src/components/: Header.tsx  MarketModal.tsx  NavBar.tsx  Toast.tsx  WalletModal.tsx  WalletProvider.tsx
src/hooks/: useMarkets.ts  usePrices.ts  useToast.ts
src/idl/: prediction_market.json
src/lib/: markets.ts  rialo.ts
src/pages/: CreateMarketPage.tsx  FaucetPage.tsx  MarketsPage.tsx  OtherPages.tsx  TradingPage.tsx
src/styles/: globals.css
